Ajout des titres

--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
     $('.collapsible').collapsible();
   });
  </script>
-  
-
       <div id="bloc_page">
         <div class="intro">
         <img src="mainpic.png" alt="Eugenia Ermurachi">
@@ -160,6 +158,7 @@
   
 
 <div id="proj">
+<img src="titres/proj.png" alt="Mes projets" />  
 <h2 class="card-title header center">Mes projets</h2>
 <div class="projets">
         <a href="http://eugeniaermurachi.com/voyages/voyages.html"> <img src="projets/landing.png" alt="icon of landing page"><br/>Landing page</a>
