--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     $('.collapsible').collapsible();
   });
  </script>
+  
+
       <div id="bloc_page">
         <div class="intro">
         <img src="mainpic.png" alt="Eugenia Ermurachi">
@@ -59,8 +61,9 @@
           </aside>
       </div>
 
-<div id="recherche">    
-  <h2 class="header center">Je cherche</h2>
+<div id="recherche">
+<div class="titre">
+<img src="titres/jecherche.png" alt="Mes projets" /></div>
     <div class="recherche">
       <p>Je suis à la recherche d'un stage en alternance de 2 ans dans le domaine de la Transformation Digitale.</p>
       <img src="recherche.png" alt="search bar">
@@ -68,7 +71,9 @@
 </h2>
 
 <div id="competences">
-      <h2 class="card-title header center">Mes compétences</h2></div>
+  <div class="titre">
+<img src="titres/compet.png" alt="Mes projets" /></div>
+</div>
 <div class="compet">
   <img src="compet.png" alt="girl with books"/>
       <table class="teal lighten-3 card">
@@ -121,7 +126,8 @@
       </div>
 
       <div id="xp">
-        <h2 class="card-title header center">Mon expérience</h2> 
+        <div class="titre">
+<img src="titres/xp.png" alt="Mes projets" /></div>
       </div>
  
       <div class="xp">
@@ -158,8 +164,8 @@
   
 
 <div id="proj">
-<img src="titres/proj.png" alt="Mes projets" />  
-<h2 class="card-title header center">Mes projets</h2>
+  <div class="titre">
+<img src="titres/proj.png" alt="Mes projets" /></div>
 <div class="projets">
         <a href="http://eugeniaermurachi.com/voyages/voyages.html"> <img src="projets/landing.png" alt="icon of landing page"><br/>Landing page</a>
         <a href="http://eugeniaermurachi.com/kitchen/morning_routine/morning.html" ><img src="projets/restaurant.png" alt="icon of restaurant website"><br/>Restaurant</a>
@@ -175,4 +181,3 @@
 
     </body>
   </html>
-        
